<resources>
    <string name="app_name">Pokédex</string>
    <string name="pokedex_title">Pokédex</string>
    <string name="pokedex_subtitle">Descubra e conheça\nseus Pokémon favoritos!</string>
    <string name="search_hint">Buscar Pokémon…</string>
    <string name="pokemon_image">Imagem do Pokémon</string>
    <string name="pokeball_decoration">Pokébola</string>
    <string name="navigate_to_details">Ver detalhes</string>
    <string name="back">Voltar</string>
    <string name="favorite">Favoritar</string>
    <string name="unfavorite">Remover dos favoritos</string>
    <string name="height_label">Altura</string>
    <string name="weight_label">Peso</string>
    <string name="base_stats">Estatísticas base</string>
    <string name="stat_hp">HP</string>
    <string name="stat_attack">Ataque</string>
    <string name="stat_defense">Defesa</string>
    <string name="stat_special_attack">Ataque Esp.</string>
    <string name="stat_special_defense">Defesa Esp.</string>
    <string name="stat_speed">Velocidade</string>
</resources>
